--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ svgwrite = "^1.4.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
+[tool.poetry.scripts]
+pyspek = "src.main:start"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
