--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Federico García <garciafedericoagustin@gmail.com>"]
 python = "^3.9"
 miniaudio = "^1.44"
 svgwrite = "^1.4.1"
+numpy = "^1.20.3"
+matplotlib = "^3.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
