--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,windows,git,github
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,windows,git,github
+# Created by https://www.toptal.com/developers/gitignore/api/python,windows,macos,linux,visualstudiocode,git
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,windows,macos,linux,visualstudiocode,git
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -16,7 +16,49 @@
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
-#!! ERROR: github is undefined. Use list command to see defined gitignore types !!#
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -205,4 +247,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,windows,git,github
+# End of https://www.toptal.com/developers/gitignore/api/python,windows,macos,linux,visualstudiocode,git
