--- a/.github/workflows/linux_ubuntu_18_04_python_3_6_test.yml
+++ b/.github/workflows/linux_ubuntu_18_04_python_3_6_test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Linux Ubuntu 18.04 - Python 3.6 - Test
 
 on:
   push:
@@ -20,15 +20,17 @@ jobs:
       with:
         python-version: 3.6
     
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+    
     - name: Install Poetry (latest version)
       uses: Gr1N/setup-poetry@v4
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        poetry install
     
-    - name: Test with pytest
+    - name: Test
       run: |
-        pytest
+        poetry run python -m pytest -v .\tests\
