--- a/.github/workflows/linux_ubuntu_18_04_python_3_7_test.yml
+++ b/.github/workflows/linux_ubuntu_18_04_python_3_7_test.yml
@@ -33,4 +33,4 @@ jobs:
     
     - name: Test
       run: |
-        poetry run python -m pytest -v .\tests\
+        poetry run python -m pytest -v tests/
