--- a/.github/workflows/linux_ubuntu_18_04_python_3_7_build.yml
+++ b/.github/workflows/linux_ubuntu_18_04_python_3_7_build.yml
@@ -31,6 +31,6 @@ jobs:
       run: |
         poetry install
     
-    - name: Test
+    - name: Build
       run: |
         poetry run python pyspek/main.py
