--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Test and build
 
 on:
   push:
@@ -9,28 +9,32 @@ on:
 jobs:
   build:
 
-    runs-on: macos-10.15
+    runs-on: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      
-    - name: Install Python 3.7
+
+    - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
-    
+        python-version: [3.7, 3.8, 3.9]
+
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-    
+
     - name: Install Poetry (latest version)
       uses: Gr1N/setup-poetry@v4
-    
+
     - name: Install dependencies
       run: |
         poetry install
-    
-    - name: Build
+
+    - name: Test
       run: |
-        poetry run python pyspek/main.py
+        poetry run python -m pytest -v tests/
+
+    - name: Build
+          run: |
+            poetry run python pyspek/main.py
