--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -9,7 +9,12 @@ on:
 jobs:
   build:
 
-    runs-on: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+    runs-on: ${{ matrix.os }}
+    
+    strategy: 
+      matrix: 
+        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+        python: [3.7, 3.8, 3.9]
 
     steps:
     - name: Checkout
@@ -18,7 +23,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ${{ matrix.python }}
 
     - name: Upgrade pip
       run: |
