--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy: 
       matrix: 
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
-        python: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - name: Checkout
@@ -23,7 +23,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python }}
+        python-version: ${{ matrix.python-version }}
 
     - name: Upgrade pip
       run: |
