--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -7,13 +7,87 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  Ubuntu:
 
     runs-on: ${{ matrix.os }}
     
     strategy: 
       matrix: 
-        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+        os: [ubuntu-18.04, ubuntu-20.04]
+        python-version: [3.7, 3.8, 3.9]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Install Poetry (latest version)
+      uses: Gr1N/setup-poetry@v4
+
+    - name: Install dependencies
+      run: |
+        poetry install
+
+    - name: Test
+      run: |
+        poetry run python -m pytest -v tests/
+
+    - name: Build
+          run: |
+            poetry run python pyspek/main.py
+
+  macOS:
+
+    runs-on: ${{ matrix.os }}
+    
+    strategy: 
+      matrix: 
+        os: [macos-10.15]
+        python-version: [3.7, 3.8, 3.9]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Install Poetry (latest version)
+      uses: Gr1N/setup-poetry@v4
+
+    - name: Install dependencies
+      run: |
+        poetry install
+
+    - name: Test
+      run: |
+        poetry run python -m pytest -v tests/
+
+    - name: Build
+          run: |
+            poetry run python pyspek/main.py
+
+  Windows:
+
+    runs-on: ${{ matrix.os }}
+    
+    strategy: 
+      matrix: 
+        os: [windows-2016, windows-2019]
         python-version: [3.7, 3.8, 3.9]
 
     steps:
