--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ description = ""
 authors = ["Federico García <garciafedericoagustin@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7,<3.10"
 miniaudio = "^1.44"
 numpy = "^1.20.3"
 matplotlib = "^3.4.2"
+scipy = "^1.6.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
